# taco

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: bump-version.yml  pages.yml  publish-pypi.yml  test.yml
docs/: DIAGRAM_PROMPT.md  SECURITY.md  abstract.md  caip-architecture-overview.html  caip-auth-flow.html  caip-security-model.html  caip-workflow-composition.html  index.html
examples/: Dockerfile  README.md  docker-compose.yml  quick_start.py  run_demo.py
examples/agents/: estimating_agent.py  rfi_generation_agent.py  supplier_quote_agent.py
examples/common/: a2a_models.py  a2a_server.py  schemas.py
examples/orchestrator/: app.py  dashboard.html
sdk/: pyproject.toml
sdk/caip/: __init__.py  agent_card.py  client.py  models.py  registry.py  schemas.py  server.py
sdk/taco/: __init__.py  _compat.py  agent.py  agent_card.py  cli.py  client.py  models.py  registry.py  schemas.py  server.py  task_store.py  types.py
sdk/taco/adapters/: __init__.py  langgraph.py
sdk/taco/monitor/: __init__.py  _ui.py
sdk/tests/: conftest.py  test_agent.py  test_client.py  test_langgraph_adapter.py  test_models.py  test_registry.py  test_schemas.py  test_server.py  test_task_store.py
spec/: agent-card-extensions.md  security.md  task-types.md
spec/schemas/: bom-v1.json  change-order-v1.json  estimate-v1.json  quote-v1.json  rfi-v1.json  schedule-v1.json
website/: docusaurus.config.js  package-lock.json
website/docs/: examples.md  intro.md  sdk.md  security.md
website/docs/getting-started/: build-agent.md  integrate-platform.md  multi-agent.md
website/src/components/: ArchitectureDiagram.js
website/src/css/: custom.css
website/src/pages/: 404.js  index.js
website/static/: taco-architecture-overview.html  taco-auth-flow.html  taco-security-model.html
